--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Despacito</h1>
             <p>Luis fonsi Ft. Pureto Rican</p>
             <audio id="song">
-               <source src="" type="audio/"></source>               
+               <source src="audio.mp3" type="audio/mp3"></source>               
             </audio>
             <input type="range" value="0" id="progress">
             
