Added functionality to skip button

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <input type="range" value="0" id="progress">
             
             <div class="controls">
-                <div><i class="ri-skip-left-fill"></i></div>
+                <div><i class="ri-skip-left-fill" onclick="skipBack()"></i></div>
                 <div onclick="playPause()"><i class="ri-play-fill" id="ctrlBtn"></i></div>
-                <div><i class="ri-skip-right-fill"></i></div>
+                <div><i class="ri-skip-right-fill" onclick="skipForward()"></i></div>
             </div>
         </div>
     </div>
