fix: change path for audio and thumbnail image

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
               <i class="ri-menu-fill"></i>
                </div>
             </nav>
-            <img src="girl.jpg" alt="girl" class="thumbnail">
+            <img src="./utils/girl.jpg" alt="girl" class="thumbnail">
             <h1>Despacito</h1>
             <p>Luis fonsi Ft. Pureto Rican</p>
             <audio id="song">
-               <source src="audio.mp3" type="audio/mp3"></source>               
+               <source src="./utils/audio.mp3" type="audio/mp3"></source>               
             </audio>
             <input type="range" value="0" id="progress">
             
